Fix: brane core (#52)
* docs: replace TODO.md with brane-core code review issues

Replace brane-contract issues (previously fixed) with comprehensive
brane-core module review findings: 2 critical, 6 high, 10 medium,
3 low priority issues plus 2 test coverage concerns.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>

* docs: add brane-docs skill for post-implementation documentation

Adds a new skill to update Javadoc and public docs after implementing
features. Includes conventions for both internal (Javadoc) and external
(docs/ MDX) documentation with accuracy verification checklists.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>

* fix: thread-safety bug in HexData.value() using double-checked locking

- Add volatile modifier to the value field for memory visibility
- Implement proper double-checked locking pattern in value() method
- Add concurrent access test to verify thread safety

Fixes Issue #1 from brane-core code review.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>

* feat: implement Destroyable interface for PrivateKey security

- Add Destroyable interface implementation to PrivateKey
- Zero input byte array after conversion to BigInteger
- Add checkNotDestroyed() validation for sign/toAddress operations
- Add security documentation explaining limitations
- Add comprehensive tests for destroy functionality

Fixes Issue #2 from brane-core code review.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>

* docs: document FastSigner thread safety and add concurrent test

- Add thread safety documentation to FastSigner Javadoc
- Document that FixedPointCombMultiplier uses ConcurrentHashMap internally
- Add concurrent signing test verifying thread safety with 50 threads

F