@@ -113,8 +113,14 @@ public interface Abi {
         final String signature = requireNonEmpty(functionSignature, "functionSignature");
         final byte[] digest = Keccak256.hash(
                 signature.getBytes(StandardCharsets.UTF_8));
-        final String hex = Hex.encode(digest).substring(0, 10);
-        return new HexData(hex);
+        // Keccak256 always produces 32 bytes = 66 hex chars with 0x prefix
+        // We need first 10 chars (0x + 8 hex chars = 4 byte selector)
+        final String hex = Hex.encode(digest);
+        if (hex.length() < 10) {
+            throw new IllegalStateException(
+                    "Keccak256 hash too short for function selector: expected at least 10 chars, got " + hex.length());
+        }
+        return new HexData(hex.substring(0, 10));
     }
 
     /**
@@ -140,23 +146,75 @@ public interface Abi {
 
     /**
      * Encodes a function call with arguments into calldata.
-     * 
+     *
      * @param name the function name
      * @param args the function arguments in order
      * @return the encoded function call
+     * @throws io.brane.core.error.AbiEncodingException if the function is not found in the ABI,
+     *         argument count doesn't match, or argument types cannot be encoded
      */
     FunctionCall encodeFunction(String name, Object... args);
 
     /**
      * Encodes constructor arguments into hex data.
-     * 
+     *
      * @param args the constructor arguments in order
      * @return the encoded constructor arguments (without bytecode)
+     * @throws io.brane.core.error.AbiEncodingException if the constructor is not defined but arguments
+     *         are provided, argument count doesn't match, or argument types cannot be encoded
      */
     HexData encodeConstructor(Object... args);
 
     Optional<FunctionMetadata> getFunction(String name);
 
+    /**
+     * Decodes matching event logs into instances of the specified type.
+     *
+     * <p>
+     * Filters the provided logs to those matching the event signature, then decodes
+     * each matching log into an instance of {@code eventType}.
+     *
+     * <h3>Type Mapping</h3>
+     * <p>
+     * The {@code eventType} can be:
+     * <ul>
+     * <li>{@code List.class} - returns decoded values as a List</li>
+     * <li>{@code Object[].class} - returns decoded values as an array</li>
+     * <li>A record or class with a constructor matching the event parameters</li>
+     * </ul>
+     *
+     * <h3>Java Module System Requirements</h3>
+     * <p>
+     * <b>Important:</b> When using custom event types (records or classes), the type
+     * and its constructor must be accessible:
+     * <ul>
+     * <li>The event type must be {@code public}</li>
+     * <li>The constructor must be {@code public}</li>
+     * <li>For modular applications (Java 9+), the package must be exported or opened</li>
+     * </ul>
+     *
+     * <p>
+     * If using the Java module system with strong encapsulation, you may need to add
+     * {@code --add-opens} JVM arguments or use {@code opens} directives in your
+     * {@code module-info.java}.
+     *
+     * <h3>Example</h3>
+     * <pre>{@code
+     * // Define a public record matching the event
+     * public record Transfer(Address from, Address to, BigInteger value) {}
+     *
+     * // Decode Transfer events from transaction logs
+     * List<Transfer> transfers = abi.decodeEvents("Transfer", receipt.logs(), Transfer.class);
+     * }</pre>
+     *
+     * @param eventName the name of the event to decode
+     * @param logs      the logs to filter and decode
+     * @param eventType the type to decode events into
+     * @param <T>       the event type
+     * @return list of decoded events (empty if no matching logs)
+     * @throws io.brane.core.error.AbiDecodingException if decoding fails or the event
+     *         type cannot be instantiated (e.g., non-public constructor, module access denied)
+     */
     <T> java.util.List<T> decodeEvents(String eventName, java.util.List<io.brane.core.model.LogEntry> logs,
             Class<T> eventType);
 
